CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

PROJECT(Server CXX)

file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# CMAKE_SOURCE_DIR ¶¥²ãcmake
# CMAKE_BINARY_DIR sln
# PROJECT_SOURCE_DIR ProjectÏÂµÄ¶¥²ãcmake

ADD_SUBDIRECTORY(third_part/libevent)

# LIBEVENT
SET(LIBEVENTBIN "${CMAKE_BINARY_DIR}/third_part/libevent/bin")
IF(WIN32)
	SET(LIBEVENT_INCLUDE	"${LIBEVENTBIN}/include")
	SET(LIBEVENT_LIB_PATH	"${LIBEVENTBIN}/lib")
	SET(LIBEVENT_LIB		"event" "event_core" "event_extra")
ELSEIF(UNIX AND NOT APPLE)
	SET(LIBEVENT_INCLUDE	"${LIBEVENTBIN}/include")
	SET(LIBEVENT_LIB_PATH	"${LIBEVENTBIN}/lib")
	SET(LIBEVENT_LIB		"event" "event_core" "event_extra" "event_pthreads")
ENDIF()

# EXTRA
IF(WIN32)
	SET(EXTRA_INCLUDE	"")
	SET(EXTRA_LIB_PATH	"")
	SET(EXTRA_LIB		"ws2_32.lib" "wsock32.lib")
ELSEIF(UNIX AND NOT APPLE)
	SET(EXTRA_INCLUDE	"")
	SET(EXTRA_LIB_PATH	"")
	SET(EXTRA_LIB		"pthread")
ENDIF()

IF(WIN32)
	add_definitions(-D_UNICODE -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS)
ENDIF()

# IMPORT FUNCTION
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
include(AddTarget)
include(AutoFiles)

add_subdirectory(src)
