INCLUDE_DIRECTORIES(
	${FRAME_INCLUDE}
	${LIBEVENT_INCLUDE}
)

LINK_DIRECTORIES(
	${LIBEVENT_LIB_PATH}
)

AUTO_FILES("." "src" "\\.(cc|cpp|h)$")
AUTO_FILES("../frame" "src" "\\.(cc|cpp|h|hpp)$")

ADD_EXECUTABLE(LoginServer ${src})

target_link_libraries(LoginServer
	${LIBEVENT_LIB}
	${EXTRA_LIB}
)

SET_TARGET_PROPERTIES(LoginServer PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin
)

STRING(REGEX REPLACE "/" "\\\\" FILE_SRC ${CMAKE_CURRENT_SOURCE_DIR}\\LoginServer.cfg)
STRING(REGEX REPLACE "/" "\\\\" FILE_DST ${PROJECT_SOURCE_DIR}\\bin)
ADD_CUSTOM_COMMAND(TARGET LoginServer POST_BUILD COMMAND copy /y ${FILE_SRC} ${FILE_DST})
