INCLUDE_DIRECTORIES(
	${FRAME_INCLUDE}
	${LIBEVENT_INCLUDE}
)

LINK_DIRECTORIES(
	${LIBEVENT_LIB_PATH}
)

AUTO_FILES("." "src" "\\.(cc|cpp|h)$")
AUTO_FILES("../frame" "src" "\\.(cc|cpp|h|hpp)$")

ADD_EXECUTABLE(RobotServer ${src})

target_link_libraries(RobotServer
	${LIBEVENT_LIB}
	${EXTRA_LIB}
)

SET_TARGET_PROPERTIES(RobotServer PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin
)

SET(FILE_SRC "${CMAKE_CURRENT_SOURCE_DIR}/RobotServer.cfg")
SET(FILE_DST "${PROJECT_SOURCE_DIR}/bin")
message(${FILE_SRC})
message(${FILE_DST})
ADD_CUSTOM_COMMAND(TARGET RobotServer POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${FILE_SRC} ${FILE_DST}
    COMMENT "Copying files..."
)
